--- a/twitterFrontend/src/styles.scss
+++ b/twitterFrontend/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "primeicons/primeicons.css";
+
 @layer tailwind-base, primeng, tailwind-utilities;
 
 @layer tailwind-base {
