--- a/twitterFrontend/src/app/components/login/login.component.html
+++ b/twitterFrontend/src/app/components/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<div class="flex items-center justify-center h-screen w-screen ">
+  <div class="border xl:p-10 p-5 flex flex-col gap-5 rounded-lg" >
+    <div class="flex justify-center border-b pb-2">
+      <h1 class="text-3xl" >Login</h1>
+    </div>
+    <div>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="flex flex-col gap-5">
+        <div>
+          <p-floatlabel variant="in">
+            <input pInputText id="username" autocomplete="off" formControlName="username" fluid="true">
+            <label for="username">Username</label>
+          </p-floatlabel>
+        </div>
+        <div>
+          <p-floatlabel variant="in">
+            <p-password id="password" formControlName="password" [toggleMask]="true" [feedback]="false" fluid="true"/>
+            <label for="password">Password</label>
+          </p-floatlabel>
+        </div>
+        <div>
+          <p-button label="Login" (keydown.enter)="onSubmit()" (click)="onSubmit()" type="submit" fluid="true"/>
+        </div>
+      </form>
+    </div>
+    <div class="flex flex-row gap-5 items-center">
+      <span>Noch keinen Account?</span>
+      <p-button label="Sign Up" />
+    </div>
+  </div>
+</div>
