--- a/twitterFrontend/src/app/components/login/login.component.html
+++ b/twitterFrontend/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="flex items-center justify-center h-screen w-screen ">
-  <div class="border xl:p-10 p-5 flex flex-col gap-5 rounded-lg" >
-    <div class="flex justify-center border-b pb-2">
+  <div class="xl:p-10 p-5 flex flex-col gap-5 rounded-lg border border-gray-300 border-opacity-20" >
+    <div class="flex justify-center border-b border-gray-300 border-opacity-20 pb-2">
       <h1 class="text-3xl" >Login</h1>
     </div>
     <div>
