--- a/twitterFrontend/src/app/components/login/login.component.html
+++ b/twitterFrontend/src/app/components/login/login.component.html
@@ -1,10 +1,13 @@
 <div class="flex items-center justify-center h-screen w-screen ">
-  <div class="xl:p-10 p-5 flex flex-col gap-5 rounded-lg border border-gray-300 border-opacity-20" >
+  <div class="xl:p-10 p-5 flex flex-col gap-5 rounded-lg border border-gray-300 border-opacity-20">
     <div class="flex justify-center border-b border-gray-300 border-opacity-20 pb-2">
-      <h1 class="text-3xl" >Login</h1>
+      <h1 class="text-3xl">Login</h1>
     </div>
     <div>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="flex flex-col gap-5">
+        @if (loginError) {
+          <p-message severity="error" icon="pi pi-times-circle" styleClass="mb-2">Login Failed</p-message>
+        }
         <div>
           <p-floatlabel variant="in">
             <input pInputText id="username" autocomplete="off" formControlName="username" fluid="true">
@@ -24,7 +27,7 @@
     </div>
     <div class="flex flex-row gap-5 items-center">
       <span>Noch keinen Account?</span>
-      <p-button label="Sign Up" />
+      <p-button label="Sign Up"/>
     </div>
   </div>
 </div>
