--- a/twitterFrontend/src/app/components/login/login.component.html
+++ b/twitterFrontend/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
       <h1 class="text-3xl">Login</h1>
     </div>
     <div>
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="flex flex-col gap-5">
+      <form [formGroup]="loginForm" class="flex flex-col gap-5">
         @if (loginError) {
           <p-message severity="error" icon="pi pi-times-circle" styleClass="mb-2">Login Failed</p-message>
         }
@@ -26,8 +26,8 @@
       </form>
     </div>
     <div class="flex flex-row gap-5 items-center">
-      <span>Noch keinen Account?</span>
-      <p-button label="Sign Up"/>
+      <span>Not registered yet?</span>
+      <p-button label="Sign Up" (click)="toSignup()" (keydown.enter)="toSignup()"/>
     </div>
   </div>
 </div>
