--- a/twitterFrontend/src/app/components/login/login.component.html
+++ b/twitterFrontend/src/app/components/login/login.component.html
@@ -21,7 +21,7 @@
           </p-floatlabel>
         </div>
         <div>
-          <p-button label="Login" (keydown.enter)="onSubmit()" (click)="onSubmit()" type="submit" fluid="true"/>
+          <p-button label="Login" icon="pi pi-user" [disabled]="loginForm.invalid || loginForm.pending" [loading]="loading" (keydown.enter)="onSubmit()" (click)="onSubmit()" type="submit" fluid="true"/>
         </div>
       </form>
     </div>
