--- a/twitterFrontend/src/app/components/home/main/main.component.html
+++ b/twitterFrontend/src/app/components/home/main/main.component.html
@@ -7,15 +7,7 @@
       </p-tablist>
       <p-tabpanels>
         <p-tabpanel value="0">
-          <span>Für dich tab</span>
-          <div class="h-96">hallo</div>
-          <div class="h-96">hallo</div>
-          <div class="h-96">hallo</div>
-          <div class="h-96">hallo</div>
-          <div class="h-96">hallo</div>
-          <div class="h-96">hallo</div>
-          <div class="h-96">hallo</div>
-          <div class="h-96">hallo</div>
+          <app-post></app-post>
         </p-tabpanel>
         <p-tabpanel value="1">
           <span>Folge ich tab</span>
