add post character counter and limit

--- a/twitterFrontend/src/app/components/home/main/main.component.html
+++ b/twitterFrontend/src/app/components/home/main/main.component.html
@@ -10,7 +10,7 @@
           <app-post></app-post>
         </p-tabpanel>
         <p-tabpanel value="1">
-          <span>Folge ich tab</span>
+          <p-message severity="info" icon="pi pi-info-circle" styleClass="mb-2">Dieser Bereich ist noch nicht implementiert</p-message>
         </p-tabpanel>
       </p-tabpanels>
     </p-tabs>
