--- a/twitterFrontend/src/app/components/shared/post/post.component.html
+++ b/twitterFrontend/src/app/components/shared/post/post.component.html
@@ -1,10 +1,11 @@
 <div class="w-full flex flex-row border-b border-gray-300 border-opacity-20 p-2">
   <div class="pt-2 mr-3 h-full">
-    <p-avatar icon="pi pi-user" shape="circle" size="large" />
+    <p-avatar icon="pi pi-user" shape="circle" size="large"/>
   </div>
   <div class="flex flex-col w-full pt-2">
     <div>
-      <textarea rows="1" fluid="true" class="text-xl" pTextarea [autoResize]="true" placeholder="Was gibt's Neues?!"></textarea>
+      <textarea pTextarea [(ngModel)]="text" fluid="true" placeholder="Was gibt's Neues?!" autoResize="true" rows="1"
+                class="text-xl"></textarea>
     </div>
     <div class="flex flex-row justify-between items-center border-t border-gray-300 border-opacity-20 pt-2 pb-2">
       <div class="flex flex-row gap-4">
@@ -15,8 +16,15 @@
         <i class="pi pi-calendar-clock text-xl text-blue-500"></i>
         <i class="pi pi-map-marker text-xl text-blue-500"></i>
       </div>
-      <div>
-        <p-button rounded label="Posten"></p-button>
+      <div class="flex flex-row gap-4 items-center">
+        @if (remainingChars < 200) {
+          <span class="text-blue-500"
+                [ngClass]="
+              {'text-red-500': remainingChars < 20,
+               'text-yellow-500': remainingChars < 100 && remainingChars >= 20,}"
+          >{{ remainingChars }}</span>
+        }
+        <p-button rounded label="Posten" [disabled]="remainingChars < 0 || remainingChars == maxLength"></p-button>
       </div>
     </div>
   </div>
