--- a/twitterFrontend/src/app/components/shared/post/post.component.html
+++ b/twitterFrontend/src/app/components/shared/post/post.component.html
@@ -9,12 +9,10 @@
     </div>
     <div class="flex flex-row justify-between items-center border-t border-gray-300 border-opacity-20 pt-2 pb-2">
       <div class="flex flex-row gap-4">
-        <i class="pi pi-image text-xl text-blue-500"></i>
-        <i class="pi pi-video text-xl text-blue-500"></i>
-        <i class="pi pi-list text-xl text-blue-500"></i>
-        <i class="pi pi-face-smile text-xl text-blue-500"></i>
-        <i class="pi pi-calendar-clock text-xl text-blue-500"></i>
-        <i class="pi pi-map-marker text-xl text-blue-500"></i>
+        <p-toast position="bottom-center" preventOpenDuplicates="true"/>
+        @for (icon of icons; track icon) {
+          <i class="pi pi-{{ icon }} text-xl text-blue-500 cursor-pointer" tabindex="0" (keydown.enter)="notYetImplementedToast()" (click)="notYetImplementedToast()"></i>
+        }
       </div>
       <div class="flex flex-row gap-4 items-center">
         @if (remainingChars < 200) {
