--- a/twitterFrontend/src/app/components/home/main.component.html
+++ b/twitterFrontend/src/app/components/home/main.component.html
@@ -1,6 +1,8 @@
 <div class="flex flex-row h-screen lg:justify-center overflow-y-scroll">
   <app-menu class="sticky top-0 h-screen"/>
-  <app-main class="w-full lg:max-w-xl" />
+  <div class="w-full lg:max-w-xl">
+    <router-outlet />
+  </div>
   <div class="lg:w-1/6 lg:block border hidden border-gray-300 border-opacity-20 sticky top-0 h-screen">
     Info
   </div>
