--- a/twitterFrontend/src/app/components/main/feed/feed.component.html
+++ b/twitterFrontend/src/app/components/main/feed/feed.component.html
@@ -8,12 +8,20 @@
       <p-tabpanels>
         <p-tabpanel value="0">
           <app-post></app-post>
+          @if (loading) {
+            <div class="w-full flex justify-center items-center">
+            <p-progress-spinner ariaLabel="loading" strokeWidth="8" animationDuration=".5s" class="mt-4" [style]="{width: '50px', height: '50px', stroke: 'blue'}" />
+            </div>
+          }
+          <p-toast position="bottom-center" preventOpenDuplicates="true"/>
           @for (tweet of tweets; track tweet.id) {
             <app-tweet [tweet]=tweet></app-tweet>
           }
         </p-tabpanel>
         <p-tabpanel value="1">
-          <p-message severity="info" icon="pi pi-info-circle" styleClass="mb-2">Dieser Bereich ist noch nicht implementiert!</p-message>
+          <p-message severity="info" icon="pi pi-info-circle" styleClass="mb-2">Dieser Bereich ist noch nicht
+            implementiert!
+          </p-message>
         </p-tabpanel>
       </p-tabpanels>
     </p-tabs>
