add logout button

--- a/twitterFrontend/src/app/components/main/menu/menu.component.html
+++ b/twitterFrontend/src/app/components/main/menu/menu.component.html
@@ -26,10 +26,7 @@
   </div>
   <div class="m-auto"></div>
   <div>
-    <app-menu-user-card
-      (keydown.enter)="notYetImplementedToast()"
-      (click)="notYetImplementedToast()"
-    />
+    <app-menu-user-card />
   </div>
 </div>
 
