--- a/twitterFrontend/src/app/components/main/menu/menu-user-card/menu-user-card.component.html
+++ b/twitterFrontend/src/app/components/main/menu/menu-user-card/menu-user-card.component.html
@@ -1,9 +1,17 @@
-<div class="flex flex-row items-center justify-between mt-2 mb-2 mr-2 rounded-full hover:bg-neutral-800">
+<p-toast position="bottom-center" preventOpenDuplicates="true"/>
+<div class="flex flex-row items-center justify-between mt-2 mb-2 mr-2 rounded-full hover:bg-neutral-800"
+     (click)="pop.toggle($event)" (keydown.enter)="pop.toggle($event)">
   <div class="flex gap-1 items-center m-2" tabindex="0">
     <p-avatar icon="pi pi-user" size="large" shape="circle"/>
-      <span class="hidden xl:block">{{ username }}</span>
+    <span class="hidden xl:block">{{ username }}</span>
   </div>
   <div class="hidden xl:block m-2" tabindex="0">
     <span class="pi pi-ellipsis-h"></span>
   </div>
 </div>
+<p-popover #pop>
+  <div class="flex flex-col gap-1">
+    <p-button [disabled]="true" label="Bestehenden Account hinzufügen" severity="primary" fluid="true" />
+    <p-button icon="pi pi-sign-out" [loading]="loading" (click)="onLogout()" (keydown.enter)="onLogout()" label="@username abmelden" severity="danger" fluid="true" />
+  </div>
+</p-popover>
