--- a/twitterFrontend/src/app/components/shared/tweet/tweet.component.html
+++ b/twitterFrontend/src/app/components/shared/tweet/tweet.component.html
@@ -22,9 +22,11 @@
           <span class="text-xs text-gray-500">&#64;{{ tweet.username }}</span>
           <app-time-ago [createdAt]="tweet.createdAt"></app-time-ago>
         </div>
-        <div>
-          <i class="pi pi-ellipsis-h text-gray-500 hover:text-blue-500"></i>
-        </div>
+        @if (!quote) {
+          <div>
+            <i class="pi pi-ellipsis-h text-gray-500 hover:text-blue-500"></i>
+          </div>
+        }
       </div>
     </div>
     <div>
@@ -48,38 +50,41 @@
         </div>
       </div>
     </p-popover>
-    <div class="flex flex-row justify-between items-center mt-2">
-      <div class="flex flex-row gap-1 items-center cursor-pointer group">
-        <i class="pi pi-comment text-md text-gray-500 group-hover:text-blue-500"></i>
-        <span class="text-xs text-gray-500 group-hover:text-blue-500">{{ tweet.countComments }}</span>
-      </div>
-      <div class="flex flex-row gap-1 items-center group" (click)="retweetPop.toggle($event)"
-           (keydown.enter)="retweetPop.toggle($event)">
-        <i class="pi pi-sync text-md" [ngClass]="{
+    @if (!quote) {
+      <div class="flex flex-row justify-between items-center mt-2">
+        <div class="flex flex-row gap-1 items-center cursor-pointer group">
+          <i class="pi pi-comment text-md text-gray-500 group-hover:text-blue-500"></i>
+          <span class="text-xs text-gray-500 group-hover:text-blue-500">{{ tweet.countComments }}</span>
+        </div>
+        <div class="flex flex-row gap-1 items-center group" (click)="retweetPop.toggle($event)"
+             (keydown.enter)="retweetPop.toggle($event)">
+          <i class="pi pi-sync text-md" [ngClass]="{
         'group-hover:text-green-500 text-gray-500': !tweet.isRetweeted,
           'group-hover:text-gray-500 text-green-500': tweet.isRetweeted}"></i>
-        <span class="text-xs" [ngClass]="{
+          <span class="text-xs" [ngClass]="{
         'group-hover:text-green-500 text-gray-500': !tweet.isRetweeted,
           'group-hover:text-gray-500 text-green-500': tweet.isRetweeted}">{{ tweet.countRetweets }}</span>
-      </div>
-      <div class="flex flex-row gap-1 items-center cursor-pointer group" (click)="onLike()" (keydown.enter)="onLike()">
-        <i class="pi pi-heart text-md"
-           [ngClass]="{
+        </div>
+        <div class="flex flex-row gap-1 items-center cursor-pointer group" (click)="onLike()"
+             (keydown.enter)="onLike()">
+          <i class="pi pi-heart text-md"
+             [ngClass]="{
            'group-hover:text-pink-600 text-gray-500': !tweet.isLiked,
            'group-hover:text-gray-500 text-pink-600': tweet.isLiked}"></i>
-        <span class="text-xs"
-              [ngClass]="{
+          <span class="text-xs"
+                [ngClass]="{
               'group-hover:text-pink-600 text-gray-500': !tweet.isLiked,
               'group-hover:text-gray-500 text-pink-600': tweet.isLiked}">{{ tweet.countLikes }}</span>
+        </div>
+        <div class="flex flex-row gap-1 items-center cursor-pointer group">
+          <i class="pi pi-chart-bar text-md text-gray-500 group-hover:text-blue-500"></i>
+          <span class="text-xs text-gray-500 group-hover:text-blue-500">{{ viewsCount }}</span>
+        </div>
+        <div class="flex flex-row gap-2 items-center">
+          <i class="pi pi-bookmark text-md cursor-pointer hover:text-blue-500 text-gray-500"></i>
+          <i class="pi pi-upload text-md cursor-pointer hover:text-blue-500 text-gray-500"></i>
+        </div>
       </div>
-      <div class="flex flex-row gap-1 items-center cursor-pointer group">
-        <i class="pi pi-chart-bar text-md text-gray-500 group-hover:text-blue-500"></i>
-        <span class="text-xs text-gray-500 group-hover:text-blue-500">{{ viewsCount }}</span>
-      </div>
-      <div class="flex flex-row gap-2 items-center">
-        <i class="pi pi-bookmark text-md cursor-pointer hover:text-blue-500 text-gray-500"></i>
-        <i class="pi pi-upload text-md cursor-pointer hover:text-blue-500 text-gray-500"></i>
-      </div>
-    </div>
+    }
   </div>
 </div>
