add status component and custom routing to status/tweetid

--- a/twitterFrontend/src/app/components/shared/quote/quote.component.html
+++ b/twitterFrontend/src/app/components/shared/quote/quote.component.html
@@ -15,7 +15,7 @@
     </div>
     <div>
       <textarea pTextarea disabled="disabled" [value]="quote.text" fluid="true" autoResize="true" rows="1"
-                class="text-md p-0"></textarea>
+                class="text-md p-0 pointer-events-none"></textarea>
     </div>
   </div>
 </div>
