--- a/twitterFrontend/src/app/components/shared/tweet/tweet.component.html
+++ b/twitterFrontend/src/app/components/shared/tweet/tweet.component.html
@@ -1,31 +1,35 @@
-@if (tweet.retweetedByUsername) {
+<div class="cursor-pointer" (click)="navigateToTweet(tweet.id)" (keydown.enter)="navigateToTweet(tweet.id)">
+  @if (tweet.retweetedByUsername) {
     <app-retweet-label [username]="tweet.retweetedByUsername" ></app-retweet-label>
-}
-<div class="w-full flex flex-row pb-2 pr-2 pl-2 border-b border-gray-300 border-opacity-20">
+  }
+  <div class="w-full flex flex-row pb-2 pr-2 pl-2 border-b border-gray-300 border-opacity-20">
     <div class="pt-2 mr-3 h-full">
-        <p-avatar icon="pi pi-user" shape="circle" size="large"/>
+      <p-avatar icon="pi pi-user" shape="circle" size="large"/>
     </div>
     <div class="flex flex-col w-full pt-2">
-        <div class="flex flex-row gap-4">
-            <div class="flex flex-row w-full items-center justify-between">
-                <div class="flex flex-row gap-2 items-center">
-                    <span class="text-white text-lg">{{ tweet.username }}</span>
-                    <i class="pi pi-verified text-blue-500"></i>
-                    <span class="text-xs text-gray-500">&#64;{{ tweet.username }}</span>
-                    <app-time-ago [createdAt]="tweet.createdAt"></app-time-ago>
-                </div>
-                <div>
-                    <i class="pi pi-ellipsis-h text-gray-500 hover:text-blue-500"></i>
-                </div>
-            </div>
+      <div class="flex flex-row gap-4">
+        <div class="flex flex-row w-full items-center justify-between">
+          <div class="flex flex-row gap-2 items-center">
+            <span class="text-white text-lg">{{ tweet.username }}</span>
+            <i class="pi pi-verified text-blue-500"></i>
+            <span class="text-xs text-gray-500">&#64;{{ tweet.username }}</span>
+            <app-time-ago [createdAt]="tweet.createdAt"></app-time-ago>
+          </div>
+          <div>
+            <i class="pi pi-ellipsis-h text-gray-500 hover:text-blue-500"></i>
+          </div>
         </div>
-        <div>
+      </div>
+      <div>
       <textarea pTextarea disabled="disabled" [value]="tweet.text" fluid="true" autoResize="true" rows="1"
-                class="text-md p-0"></textarea>
-        </div>
-        @if (tweet.quoteDTO) {
-            <app-quote [quote]="tweet.quoteDTO"></app-quote>
-        }
-        <app-social-interactions [socialInteractions]="socialInteractions" (socialInteractionsChange)="onSocialInteractionsChange($event)"></app-social-interactions>
+                class="text-md p-0 pointer-events-none"></textarea>
+      </div>
+      @if (tweet.quoteDTO) {
+        <app-quote [quote]="tweet.quoteDTO" (click)="navigateToQuote($event, tweet.quoteDTO.postId)" (keydown)="navigateToQuote($event, tweet.quoteDTO.postId)"></app-quote>
+      }
+      <app-social-interactions [socialInteractions]="socialInteractions"
+                               (socialInteractionsChange)="onSocialInteractionsChange($event)"></app-social-interactions>
     </div>
+  </div>
 </div>
+
