add load status and comments and status component

--- a/twitterFrontend/src/app/components/main/status/status.component.html
+++ b/twitterFrontend/src/app/components/main/status/status.component.html
@@ -1,1 +1,16 @@
-<p>status works!</p>
+<div class="w-full flex flex-col">
+  <div class="w-full flex flex-row items-center p-2">
+    <i class="pi pi-arrow-left text-xl mr-6 cursor-pointer hover:text-blue-500" (click)="routeBack()" (keydown.enter)="routeBack()"></i>
+    <span class="text-2xl">Post</span>
+  </div>
+  <div>
+    @if (parent) {
+      <app-tweet [tweet]="parent!"></app-tweet>
+    }
+  </div>
+  <div>
+    @for (comment of comments; track comment) {
+      <app-tweet [tweet]="comment!"></app-tweet>
+    }
+  </div>
+</div>
