--- a/twitterFrontend/src/app/components/main/status/status.component.html
+++ b/twitterFrontend/src/app/components/main/status/status.component.html
@@ -9,6 +9,9 @@
     }
   </div>
   <div>
+    <app-post placeholder="Deine Antwort posten" [parentPost]="parent" postButtonLabel="Antworten"></app-post>
+  </div>
+  <div>
     @for (comment of comments; track comment) {
       <app-tweet [tweet]="comment!"></app-tweet>
     }
